Replace Hamcrest matchers with AssertJ matchers